# demand-forecasting-for-inventory-planning

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
data/results/: online_retail_ii_production_metrics.csv  online_retail_ii_v2_v4_compare.csv  online_retail_ii_v2_vs_v3.csv  online_retail_ii_v3_accuracy.csv  online_retail_ii_v3_inventory.csv  online_retail_ii_v4_holdout.csv  online_retail_ii_v4_multiwindow.csv  superstore_production_metrics.csv  superstore_v1_v2_v4_compare.csv  superstore_v2_vs_v3.csv  superstore_v3_accuracy.csv  superstore_v3_inventory.csv  superstore_v4_holdout.csv  superstore_v4_multiwindow.csv
demand_forecast/: __init__.py  bakeoff.py  classical.py  metrics.py  timesfm_runner.py
demand_forecast/accuracy_push/: __init__.py  hierarchy_safe.py  pipeline.py
demand_forecast/advanced/: __init__.py  ensemble.py  evaluation.py  features.py  hierarchy.py  inventory.py  models_exog.py  pipeline.py
notebooks/: 01_superstore_demand_forecast.ipynb  01_superstore_demand_forecast.py  02_online_retail_ii_demand_forecast.ipynb  02_online_retail_ii_demand_forecast.py  03_superstore_advanced_demand_forecast.py  04_online_retail_ii_advanced_demand_forecast.py  05_superstore_accuracy_push.py  06_online_retail_ii_accuracy_push.py
