[project]
name = "demand-forecasting-for-inventory-planning"
version = "0.1.0"
description = "Tutorial notebooks: demand forecasting for inventory planning (PyCaret TS survey + TimesFM 2.5)"
readme = "README.md"
requires-python = ">=3.13.13"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "jupytext>=1.19.4",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pmdarima>=2.1.1",
    "pycaret[timeseries]==4.0.0a8",
    "requests>=2.34.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "timesfm[torch]>=2.0.2",
    "ucimlrepo>=0.0.7",
]
